# serde-conference

./: Cargo.toml  POBL_specification.md  README.md
src/: error.rs  expand_this.rs  json_example.rs  pobl.rs  simple_serialization.rs  simple_serializer.rs  ultra_basic.rs
