[package]
name = "poml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json_example"
path = "src/json_example.rs"

[[bin]]
name = "ultra_basic"
path = "src/ultra_basic.rs"

[[bin]]
name = "simple_serialization"
path = "src/simple_serialization.rs"

[[bin]]
name = "simple_serializer"
path = "src/simple_serializer.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
