[package]
name = "pobl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json_example"
path = "src/json_example.rs"

[[bin]]
name = "expand_this"
path = "src/expand_this.rs"

[[bin]]
name = "simple_serialization"
path = "src/simple_serialization.rs"

[[bin]]
name = "simple_serializer"
path = "src/simple_serializer.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
